--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
 	"private": true,
 	"scripts": {
-		"test": "grunt test",
-		"lint": "node_modules/eslint/bin/eslint.js ./",
-		"lint-fix": "node_modules/eslint/bin/eslint.js ./ --fix"
+		"test": "grunt test"
 	},
 	"devDependencies": {
-		"eslint-config-wikimedia": "0.15.0",
-		"grunt": "1.1.0",
+		"eslint-config-wikimedia": "0.17.0",
+		"grunt": "1.3.0",
 		"grunt-banana-checker": "0.9.0",
-		"grunt-eslint": "22.0.0",
-		"grunt-jsonlint": "1.1.0",
-		"grunt-stylelint": "0.14.0",
-		"stylelint-config-wikimedia": "0.9.0"
+		"grunt-eslint": "23.0.0",
+		"grunt-stylelint": "0.16.0",
+		"stylelint-config-wikimedia": "0.10.3"
 	},
 	"eslintIgnore": [
-		"vendor/**"
+		"vendor"
 	]
 }
